fix styling on mobile

--- a/static/style.scss
+++ b/static/style.scss
@@ -113,18 +113,23 @@ header {
     }
 
     .post-heading {
-        display: inline;
         position: relative;
         top: -18px;
         left: 50px;
         background-color: white;
         border: solid 1px $lightgray;
         padding: 0 8px;
-        white-space: nowrap;
+        display: inline-block;
+        max-width: 80vw;
 
         a {
             color: $textcolor;
             text-decoration: none;
+        }
+
+        h1 {
+            margin-top: 0.2rem;
+            margin-bottom: 0.2rem;
         }
     }
 
